--- a/Client/Client/Resources/layout/Wait.axml
+++ b/Client/Client/Resources/layout/Wait.axml
@@ -8,6 +8,5 @@
         android:indeterminate="true"
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/WaitSpinner" />
+        android:layout_height="wrap_content" />
 </RelativeLayout>
