--- a/Client/Client/Resources/layout/Commands.axml
+++ b/Client/Client/Resources/layout/Commands.axml
@@ -8,7 +8,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/CommandList" />
+        android:id="@+id/Commands_List" />
     <TextView
         android:visibility="invisible"
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         android:text="Yhtään komentoa ei löytynyt"
         android:textSize="20sp"
         android:textStyle="normal"
-        android:id="@+id/CommandsNone" />
+        android:id="@+id/Commands_None" />
     <ImageView
         android:layout_width="65dp"
         android:layout_height="65dp"
@@ -25,5 +25,5 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/add"
         android:clickable="true"
-        android:id="@+id/CommandAdd" />
+        android:id="@+id/Commands_Add" />
 </RelativeLayout>
