--- a/Client/Client/Resources/layout/Editor.axml
+++ b/Client/Client/Resources/layout/Editor.axml
@@ -22,7 +22,7 @@
                 android:textColor="#FFFFFFFF"
                 android:minWidth="50dp"
                 android:background="#00000000"
-                android:id="@+id/EditorField" />
+                android:id="@+id/Editor_Text" />
         </HorizontalScrollView>
     </ScrollView>
     <ImageView
@@ -32,5 +32,5 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/Add"
         android:clickable="true"
-        android:id="@+id/EditorUtility" />
+        android:id="@+id/Editor_Options" />
 </RelativeLayout>
