--- a/Client/Client/Resources/layout/File.axml
+++ b/Client/Client/Resources/layout/File.axml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="20dp"
     android:minWidth="300dp">
     <EditText
         android:inputType="textNoSuggestions"
-        android:hint="Nimi"
+        android:hint="Tiedostonimi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/CreateProject_Name" />
+        android:id="@+id/File_Name" />
 </LinearLayout>
