--- a/Client/Client/Resources/layout/Execute.axml
+++ b/Client/Client/Resources/layout/Execute.axml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="22dp">
     <TextView
         android:text="Komennolla ei ollut kuvausta"
@@ -9,35 +10,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/Execute_Description" />
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="60dp"
-        android:layout_below="@id/Execute_Description"
+        android:orientation="vertical"
         android:layout_marginTop="16dp"
-        android:id="@+id/Execute_Container">
+        android:layout_marginBottom="6dp">
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/Execute_List" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Ei prosesseja"
-            android:textStyle="bold"
-            android:id="@+id/Execute_NoProcesses" />
-    </RelativeLayout>
+    </LinearLayout>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Execute_Description"
         android:hint="Nimi"
         android:id="@+id/Execute_Name" />
     <CheckBox
         android:text="Avaa konsoli"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Execute_Name"
         android:id="@+id/Execute_Console" />
-</RelativeLayout>
+</LinearLayout>
