--- a/Client/Client/Resources/layout/Setup.axml
+++ b/Client/Client/Resources/layout/Setup.axml
@@ -9,6 +9,7 @@
         android:hint="Osoite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textNoSuggestions"
         android:id="@+id/Setup_Address" />
     <EditText
         android:hint="Portti"
@@ -17,9 +18,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/Setup_Port" />
     <EditText
-        android:hint="####-####-####-####-####-####"
+        android:hint="####-####-####-####"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textNoSuggestions"
         android:id="@+id/Setup_Key" />
 </LinearLayout>
